--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,11 @@ piper-tts>=1.4.0
 # Audio I/O
 PyAudio>=0.2.14
 
+# Audio preprocessing (VAD + noise reduction)
+noisereduce>=3.0.0
+webrtcvad>=2.0.10
+numpy>=1.24.0
+
 # Display / animation
 pygame>=2.6.0
 
